--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <div class="table">
       <table>
         <tr>
-          <th>test</th>
-          <th>test</th>
-          <th>test</th>
+          <th><button id="a1"></button></th>
+          <th><button id="a2"></button></th>
+          <th><button id="a3"></button></th>
         </tr>
         <tr>
-          <th>test</th>
-          <th>test</th>
-          <th>test</th>
+          <th><button id="a4"></button></th>
+          <th><button id="a5"></button></th>
+          <th><button id="a6"></button></th>
         </tr>
         <tr>
-          <th>test</th>
-          <th>test</th>
-          <th>test</th>
+          <th><button id="a7"></button></th>
+          <th><button id="a8"></button></th>
+          <th><button id="a9"></button></th>
         </tr>
       </table>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
