all buttons working, without logic

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="table">
       <table>
         <tr>
-          <th><button id="a1"></button></th>
-          <th><button id="a2"></button></th>
-          <th><button id="a3"></button></th>
+          <th><button class="btn" id="a1"></button></th>
+          <th><button class="btn" id="a2"></button></th>
+          <th><button class="btn" id="a3"></button></th>
         </tr>
         <tr>
-          <th><button id="a4"></button></th>
-          <th><button id="a5"></button></th>
-          <th><button id="a6"></button></th>
+          <th><button class="btn" id="a4"></button></th>
+          <th><button class="btn" id="a5"></button></th>
+          <th><button class="btn" id="a6"></button></th>
         </tr>
         <tr>
-          <th><button id="a7"></button></th>
-          <th><button id="a8"></button></th>
-          <th><button id="a9"></button></th>
+          <th><button class="btn" id="a7"></button></th>
+          <th><button class="btn" id="a8"></button></th>
+          <th><button class="btn" id="a9"></button></th>
         </tr>
       </table>
     </div>
