added working algorithm of cecking if user won

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </tr>
       </table>
     </div>
+    <div>
+      <input id="restart" type="button" value="Restart" onclick='window.location.reload()'> 
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
