--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 id="congrat"></h1>
     <div class="table">
       <table>
         <tr>
