working buttons on test.js

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <div>
       <input id="restart" type="button" value="Restart" onclick='window.location.reload()'> 
     </div>
-    <script src="script.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
