done version of tic tac toe(stable)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         </tr>
       </table>
     </div>
-    <div>
-      <input id="restart" type="button" value="Restart" onclick='window.location.reload()'> 
+    <div style="display: flex; flex-wrap:wrap; width: 100%; justify-content: space-evenly;">
+      <input id="restart" type="button" value="Restart" onclick='window.location.reload()'>
+      <div>
+        <input id="newPlayer" type="button" value="New Players"> 
+      </div>
     </div>
     <script src="test.js"></script>
   </body>
