--- a/index.html
+++ b/index.html
@@ -28,10 +28,22 @@
         </tr>
       </table>
     </div>
-    <div style="display: flex; flex-wrap:wrap; width: 100%; justify-content: space-evenly;">
-      <input id="restart" type="button" value="Restart" onclick='window.location.reload()'>
+    <div
+      style="
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+      "
+    >
       <div>
-        <input id="newPlayer" type="button" value="New Players"> 
+        <input id="restart" type="button" value="Restart" />
+      </div>
+      <div>
+        <input id="newPlayer" type="button" value="New Players" />
+      </div>
+      <div>
+        <input id="play_AI" type="button" value="Play with AI" />
       </div>
     </div>
     <script src="test.js"></script>
