--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <h1 id="congrat"></h1>
+    <div class="tips">
+    <p>Restart: Fully restarts the game</p>
+    <p>New Players: start game with new players</p>
+    <p>Play With AI: play with Artificial Intelegence</p>
+    <p>Play Again: Play Again</p></div>
+    
     <div class="table">
       <table>
         <tr>
@@ -45,7 +51,10 @@
       <div>
         <input id="play_AI" type="button" value="Play with AI" />
       </div>
+      <div>
+        <input id="newGame" type="button" value="Play Again" />
+      </div>
     </div>
-    <script src="test.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
