--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input id="restart" type="button" value="Restart" />
       </div>
       <div>
-        <input id="newPlayer" type="button" value="New Players" />
+        <input id="newPlayer" type="button" value="2 Players" />
       </div>
       <div>
         <input id="play_AI" type="button" value="Play with AI" />
