--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       "
     >
       <div>
-        <input id="restart" type="button" value="Restart" />
+        <input id="restart" type="button" value="Reset" />
       </div>
       <div>
         <input id="newPlayer" type="button" value="2 Players" />
