--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1 id="congrat"></h1>
     <div class="tips">
-    <p>Restart: Fully restarts the game</p>
+    <p>Reset: Fully resets the game</p>
     <p>New Players: start game with new players</p>
     <p>Play With AI: play with Artificial Intelegence</p>
     <p>Play Again: Play Again</p></div>
