--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="tic-tac-toe.png" type="/tic-tac-toe.png"/>
   </head>
   <body>
     <h1 id="congrat"></h1>
