--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <div class="table">
       <table>
         <tr>
-          <th><button class="btn" id="a1"></button></th>
-          <th><button class="btn" id="a2"></button></th>
-          <th><button class="btn" id="a3"></button></th>
+          <td><button class="btn" id="a1"></button></td>
+          <td><button class="btn" id="a2"></button></td>
+          <td><button class="btn" id="a3"></button></td>
         </tr>
         <tr>
-          <th><button class="btn" id="a4"></button></th>
-          <th><button class="btn" id="a5"></button></th>
-          <th><button class="btn" id="a6"></button></th>
+          <td><button class="btn" id="a4"></button></td>
+          <td><button class="btn" id="a5"></button></td>
+          <td><button class="btn" id="a6"></button></td>
         </tr>
         <tr>
-          <th><button class="btn" id="a7"></button></th>
-          <th><button class="btn" id="a8"></button></th>
-          <th><button class="btn" id="a9"></button></th>
+          <td><button class="btn" id="a7"></button></td>
+          <td><button class="btn" id="a8"></button></td>
+          <td><button class="btn" id="a9"></button></td>
         </tr>
       </table>
     </div>
